chapter1.css
/* 
*{
	border: 1px solid white;
} */


body {
	background-color: black;
	color: white;
	min-height: 99vh;

	box-sizing: border-box;
	margin: 0;
	padding: 15px;
	letter-spacing: 1px;

	font-family: "Poppins", sans-serif;
	font-weight: 400;
	font-style: normal;
	text-align: center;

	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

/* Tip */

.tip {
	opacity: 0;
	font-size: 16px;
	transition: opacity 0.5s ease-in-out, transform 2s ease-in-out;
	position: absolute;
	top: 85%;
	left: 50%;
	transform: translate(-50%, -50%);
	padding: 1em;
	border-radius: 6px;
}

.tip.show {
	opacity: 1;
	transform: translate(-50%, -50%) scale(2);
	animation: colorChange 2s;
}

@keyframes colorChange {
	0% { color: purple; background-color: white; }
	33% { color: purple; background-color: white; }
	66% { color: purple; background-color: white; }
	100% { color: transparent; }
}

.container {
	width: 350px;
}

/* Main */

h1 {
	color: gold;
	text-transform: capitalize;
}

.img-text-wrapper {
	display: flex;
	flex-direction: column;
}

img {
	width: 350px;
	height: 350px;
	border-radius: 16px;
}

p {
	font-size: 22px;
	line-height: 1.5;
	padding: 1em;
}



/* Modal for companion */

.modal {
	width: 350px;
	height: 350px;
	border-radius: 8px;
	padding: 5px;
	z-index: 3;

	background-color: white;
	color: black;

	display: none;
    position: fixed;
    right: 0;
    left: 0;
    top: 0;
    bottom: 0;
    margin: auto;
}

.modal-header {
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 2em;
}

.cross {
	font-weight: bold;
	color: red;
	font-size: larger;
}

.cross:hover {
	cursor: pointer;
}

.companions {
	display: flex;
	justify-content: space-around;
	align-items: center;
	/* border: 1px solid black; */
}

.companions img {
	width: 100px;
	height: 100px;
	object-fit: cover;
	border-radius: 50%;
}

.companions img:hover {
	transform: scale(1.2);
	transition: 0.3s ease-in-out;
	border: 2px solid cyan;
}

.companions button {
	background-color: beige;
	color: color(srgb red green blue);
	width: 90%;
	height: 20%;
	border: 2px solid lime;
}

.companions button:hover {
	background-color: black;
	color: gold;
}

.user-companion-img{
	width: 270px;
	height: 270px;
	border-radius: 50%;
}

.modal-inner span{
	font-size: 30px;
	margin-top: 1em;
	color: chocolate;
}


.random-img {
	object-fit: cover;
}

#user-companion-name {
	color: gold;
	text-transform: uppercase;
	font-weight: bold;
	letter-spacing: 2px;

	text-shadow: 3px 3px 6px #DC143C, 0 0 0.75em #DC143C, 0 0 0.4em #DC143C;
}

/* Challenge form */

.challenge {
	padding: 1em;
	margin-top: 5em;
	border-radius: 6px;
	border: 2px solid white;
	box-shadow: 0 0 30px 8px rgba(0, 150, 255, 0.7);
}

hr {
	width: 80%;
}

form {
	display: flex;
	flex-direction: column;
	justify-content: start;
	align-items: start;
	gap: 0.5em;
}

form p {
	color: cyan;
}

input[type=radio] {
	width: 2em;
	height: 2em;
	margin: 0;
}

.input-wrapper {
	font-size: 25px;
	display: flex;
	justify-content: center;
	align-items: center;
	gap: 1em;
}

.input-wrapper span {
	color: rgb(241, 84, 241);
}

button {
	width: 300px;
	height: 44px;
	margin-top: 2em;
	border-radius: 6px;
	font-size: 20px;
	font-family: inherit;
}

button:hover {
	cursor: pointer;
	background-color: lightcyan;
}

button:active {
	transform: translate(1px, 1px);
}

#result-area {
	padding: 1em;
	font-size: 22px;
	transition: transform 1s ease-in-out;
	color: black;
	margin-bottom: 1em;
}

a {
	color: wheat;
	font-size: 23px;
}

/* Section */

section p {
	color: coral;
	font-size: 23px;
	margin: 0;
}


/* Scratch Card */

body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
    background-color: black;
    color: white;
}

.scratch-card-container {
    padding: 24px 16px;
}

h2.main-heading {
    border-left: 4px solid red;
    padding: 8px 32px;
    margin-top: 0;
    margin-bottom: 42px;
}

.scratch-container {
    width: 300px;
    height: 300px;
    border-radius: 10px;
    margin-bottom: 32px;
    overflow: hidden;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    user-select: none; /* Prevent text selection */
}

.scratch-card {
    position: relative;
    width: 100%;
    height: 100%;
}

.egg {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1; /* Ensure text appears above the canvas */
    font-size: 24px;
    font-weight: bold;
    letter-spacing: 2px;
    color: black;
    pointer-events: none; /* Ensure the text doesn't interfere with the canvas */
    user-select: none;
}

.egg img {
    object-fit: cover;
    width: 250px;
    border-radius: 10px;
    transition: 3s ease-in-out;
}

#egg-rarity {
    font-size: 25px;
	border-radius: 6px;
	font-size: 1.5em;
	text-align: center;
    text-transform: uppercase;
	border: 5px solid beige;
    color: gold;
    text-shadow: 0 0 8px violet;
}

canvas {
    position: absolute;
    top: 0;
    left: 0;
    cursor: grabbing;
    z-index: 2; /* Ensure canvas is on top for interaction */
}






































/* Music Player */

audio {
	margin-top: 3em;
}

.audio-player .name,
.audio-player .time{
	font-size: 18px;
}

.audio-player {
	height: 50px;
	width: 350px;
	background: #444;
	box-shadow: 0 0 20px 0 #000a;
  
	font-family: arial;
	color: white;
	font-size: 0.75em;
	overflow: hidden;
  
	display: grid;
	grid-template-rows: 6px auto;
	.timeline {
	  background: white;
	  width: 100%;
	  position: relative;
	  cursor: pointer;
	  box-shadow: 0 2px 10px 0 #0008;
	  .progress {
		background: coral;
		width: 0%;
		height: 100%;
		transition: 0.25s;
	  }
	}
	.controls {
	  display: flex;
	  justify-content: space-between;
	  align-items: stretch;
	  padding: 0 20px;
  
	  > * {
		display: flex;
		justify-content: center;
		align-items: center;
	  }
	  .toggle-play {
		&.play {
		  cursor: pointer;
		  position: relative;
		  left: 0;
		  height: 0;
		  width: 0;
		  border: 7px solid #0000;
		  border-left: 13px solid white;
		  &:hover {
			transform: scale(1.1);
		  }
		}
		&.pause {
		  height: 15px;
		  width: 20px;
		  cursor: pointer;
		  position: relative;
		  &:before {
			position: absolute;
			top: 0;
			left: 0px;
			background: white;
			content: "";
			height: 15px;
			width: 3px;
		  }
		  &:after {
			position: absolute;
			top: 0;
			right: 8px;
			background: white;
			content: "";
			height: 15px;
			width: 3px;
		  }
		  &:hover {
			transform: scale(1.1);
		  }
		}
	  }
	  .time {
		display: flex;
  
		> * {
		  padding: 2px;
		}
	  }
	  .volume-container {
		cursor: pointer;
		.volume-button {
		  height: 26px;
		  display: flex;
		  align-items: center;
		  .volume {
			transform: scale(0.7);
		  }
		}
  
		position: relative;
		z-index: 2;
		.volume-slider {
		  position: absolute;
		  left: -3px;
		  top: 15px;
		  z-index: -1;
		  width: 0;
		  height: 15px;
		  background: white;
		  box-shadow: 0 0 20px #000a;
		  transition: 0.25s;
		  .volume-percentage {
			background: coral;
			height: 100%;
			width: 75%;
		  }
		}
		&:hover {
		  .volume-slider {
			left: -123px;
			width: 120px;
		  }
		}
	  }
	}
  }

